<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape"
        android:padding="16dp"
        tools:context=".view.LoginActivity">

    <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:src="@drawable/ic_logotipo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_email" />


    <EditText
            android:id="@+id/edit_email"
            style="@style/EditWhite"
            android:layout_width="0dp"
            android:drawableEnd="@drawable/ic_mail"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_logo" />

    <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            style="@style/EditWhite"
            android:drawableEnd="@drawable/ic_lock"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/senha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <Button
            android:id="@+id/button_login"
            style="@style/ButttonPink"
            android:text="@string/entrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_password" />

    <TextView
            android:id="@+id/text_new_account"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/EditWhite"

            android:layout_height="wrap_content"
            android:text="@string/nao_tem_uma_conta"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            app:layout_constraintEnd_toStartOf="@id/text_register"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/button_login" />


    <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditWhite"

            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/text_new_account"
            android:text="@string/cadastre_se"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            app:layout_constraintEnd_toEndOf="@id/button_login"
            app:layout_constraintStart_toEndOf="@id/text_new_account" />

</androidx.constraintlayout.widget.ConstraintLayout>